--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,38 @@
 {
-  "name": "Arka Backend",
-  "dockerComposeFile": "docker-compose.dev.yml",
+  "name": "Arka_Dev",
+  "dockerComposeFile": ["./docker-compose.dev.yml"],
   "service": "backend",
-  "workspaceFolder": "/app",
+  
+  //Code Frontend 
+  // "service": "frontend",
+  // "workspaceFolder": "/app",
+
+  "workspaceFolder": "/workspace",
   "overrideCommand": true,
   "shutdownAction": "stopCompose",
+
+
+  "containerEnv": {
+    "GRADLE_USER_HOME": "/home/vscode/.gradle"
+  },
+
   "customizations": {
     "vscode": {
-      "settings": {
-        "terminal.integrated.defaultProfile.linux": "bash"
-      },
       "extensions": [
-        "ms-azuretools.vscode-docker",
-        "esbenp.prettier-vscode",
-        "dbaeumer.vscode-eslint",
-        "ms-azuretools.vscode-containers",
         "vscjava.vscode-java-pack",
-        "dsznajder.es7-react-js-snippets",
-        "bradlc.vscode-tailwindcss",
-        "vmware.vscode-boot-dev-pack"
-      ]
+        "richardwillis.vscode-gradle",
+        "pivotal.vscode-spring-boot",
+        "ms-azuretools.vscode-docker",
+        "vscjava.vscode-gradle",
+        "vmware.vscode-boot-dev-pack",
+        "redhat.java",
+        "usernamehw.errorlens"
+      ],
+      "settings": {
+        "java.configuration.checkProjectSettingsExclusions": false,
+        "java.configuration.updateBuildConfiguration": "automatic",  
+        "java.compile.nullAnalysis.mode": "automatic"
+      }
     }
   }
 }
