--- a/.devcontainer/docker-compose.dev.yml
+++ b/.devcontainer/docker-compose.dev.yml
@@ -7,52 +7,74 @@ services:
     image: mysql:8.4
     mem_limit: 2420m
     container_name: MySQL_Arka
+    env_file:
+      - ./.env.db
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_0900_ai_ci
-    environment:
-      MYSQL_DATABASE: appdb
-      MYSQL_USER: appuser
-      MYSQL_PASSWORD: pword
-      MYSQL_ROOT_PASSWORD: pwordR
     ports:
       - "3306:3306"
     volumes:
       - mysqldata:/var/lib/mysql
     healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
+      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD || exit 1"] # -> Ping
+      interval: 20s # -> Lapso de Ejecucion
+      timeout: 10s 
+      retries: 2
+      start_period : 20s
     networks:
       - Data-Back
+      - Data-DataManager
+
+  db-init:  
+    image: mysql:8.4  
+    container_name: MYSQLInit
+    env_file:  
+      - ./.env.db  
+    depends_on:  
+      db:  
+        condition: service_healthy  
+    entrypoint: sh -c "mysql -hdb -uroot -p$$MYSQL_ROOT_PASSWORD $$MYSQL_DATABASE < /init.sql"  
+    volumes:  
+      - ./init.sql:/init.sql  
+    networks:  
+      - Data-Back
+
+  phpmyadmin: 
+    container_name: PHPMyAdmin_Arka_Dev
+    image: phpmyadmin:5.2.3-apache
+    mem_limit: 2420m
+    ports:  
+      - "127.0.0.1:749:80" 
+    environment:  
+      - PMA_HOST=db # nombre del servicio MySQL en el Docker-Compose -> resolucion de host
+      - PMA_PORT=3306
+    depends_on:  
+      db:
+        condition : service_healthy
+    networks:
+      - Data-DataManager
 
   backend:  
     build:  
       context: ../Backend  
       dockerfile: Dockerfile.dev
     mem_limit: 6420m
-    network_mode: host
+    network_mode: host # -> Means container will use the host network || TODO -> Solve DockerNetworkIssue
     container_name: Backend_Arka
     working_dir: /workspace
-    # command: bash -lc "./gradlew bootRun --continuous"  
+    # DEPRECATED -> command: bash -lc "./gradlew bootRun --continuous"  
     depends_on:
       db:
         condition: service_healthy
-    environment:  
-      # - SPRING_PROFILES_ACTIVE=dev  
-      - JAVA_TOOL_OPTIONS=-Djava.net.preferIPv4Stack=true -Djava.net.preferIPv4Addresses=true -XX:MaxRAMPercentage=85
-      - GRADLE_USER_HOME=/home/vscode/.gradle  
-      # - SPRING_PROFILES_ACTIVE= prod
-      - SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/appdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      - db_username=appuser
-      - db_password=pword
+    env_file:
+      - ./.env.back
     # ports:  
     #   - "8080:8080"   # Spring Boot  
     volumes:  
       # El workspace para este servicio lo monta automáticamente devcontainer  
       - gradle-cache:/home/vscode/.gradle
-      - ../Backend/Backend:/workspace
+      - ../Backend/src:/workspace
     init: true
     stdin_open: true
     tty: true
@@ -62,16 +84,13 @@ services:
     #   - Data-Back
     #   - Front-Back
 
-
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile.dev
-      # args:
-        # NEXT_PUBLIC_AUTH_API_URL: "http://localhost:8080/api/v1/user"
-        # NEXT_PUBLIC_PRODUCT_API_URL: "http://localhost:8080/api/v1/products"
-        # NEXT_PUBLIC_PROVIDER_API_URL: "http://localhost:8080/api/proveedores"
     mem_limit: 6420m
+    env_file:
+      - ./.env.front
     container_name: Frontend_Arka
     volumes:
       - ../frontend:/app
@@ -88,7 +107,6 @@ services:
   #   security_opt:
   #      - no-new-privileges:true
     
-
 volumes:
   mysqldata:
   gradle-cache:
@@ -100,3 +118,7 @@ networks:
   Front-Back:
     driver: bridge
     enable_ipv6: false
+  Data-DataManager:
+    driver: bridge
+
+# Enable ipv6 is an scar, result of the war against DockerNetworkIssue
