--- a/.devcontainer/.env.back
+++ b/.devcontainer/.env.back
@@ -7,4 +7,4 @@ GRADLE_USER_HOME=/home/vscode/.gradle
 db_name=Ecommerce
 db_username=USERreal07
 db_password=jfbvdhjfv
-SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/${db_name}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/${db_name}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
