Small Arch Fix: Se crea el modulo de notifications, ahí irá todo el contenido de esta funcionalidad -> Se estipula como un modulo que solo será accesible desde SharedKernel(Contrato Ubicado ahí)
Se mueve el globalHanldeException, pasa de estar en SharedKernel a estar en bootstrap (SharedKernel no deberia tener implementaciones, solo contratos y entidadesReferenciales)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ Backend/src/!**/src/!main/**/build/
 Backend/src/!**/src/!test/**/build/
 
 Backend/src/### STS ###
+Backend/src/**/**.class**
 Backend/src/.apt_generated
 Backend/src/.classpath
 Backend/src/.factorypath
