fix : Notification ComponentScanIssue Se agrega la annotation @Import, para agregar las configuraciones de los modulos del monolito modular //Comunmente spring lo escanea solo, pero esta es la config correcta -->
Agregar la clase NAMEMODULECONFIG.java a cada modulo, y mapearla con el @Import del ApplicationRun

--- a/Backend/src/bootstrap/build.gradle
+++ b/Backend/src/bootstrap/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation project(':order')
     implementation project(':product')
     implementation project(':shopingCart')
-    
+    implementation project(':notifications')
     // Configuración global
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
