Add : HU6 (NotificacionCambioEstado) , EndpointParaCmabiarEstado
Se disponibiliza un endpoint en el cual se puede cambair el estado de una Orden Registrada en el Sistema.

El handles valida los privilegios del requester(Logica Habilita futura integracion JWT), la validez de la informaicon suministrada, la existencia de usuario y orden.

Modifica el estado de la orden con el Enviado desde la request del enpoint, y lo persiste; Despues, notifica por email al marcado como dueño de la Orden

--- a/Backend/src/order/build.gradle
+++ b/Backend/src/order/build.gradle
@@ -4,7 +4,8 @@ dependencies {
     implementation project(':shared-kernel')
     implementation project (':shopingCart')
     implementation project(':product')  // Si order necesita product
-    implementation project(':user')   // Si order necesita client
+    // implementation project(':user')   // Si order necesita client
+    
     
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
